--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -157,6 +157,10 @@ html {
 .proofratings-review-widgets-grid > * {margin-left: auto; margin-right: auto;}
 
 .proofratings-widget {
+    --shadowColor: rgba(0,0,0, 0.25);
+    --shadowHoverColor: rgba(0,0,0, 0.25);
+    --reviewCountTextColor: #fff;
+    
     color: var(--textColor, inherit)!important;
     display: flex;
     position: relative;
@@ -172,11 +176,12 @@ html {
     text-decoration: none!important;
     border: 3px solid transparent;
     transition: 150ms all;
-    box-shadow: 1px 1px 4px 0px rgba(0,0,0, 0.25)!important;
+    box-shadow: 1px 1px 4px 0px var(--shadowColor) !important;
 }
 
 .proofratings-widget:hover {
-    border-color: var(--themeColor)
+    border-color: var(--themeColor);
+    --shadowColor: var(--shadowHoverColor)!important
 }
 
 .proofratings-widget .review-site-logo {
@@ -196,7 +201,7 @@ html {
 }
 
 .proofratings-widget .review-count {
-    color: #fff;
+    color: var(--reviewCountTextColor);
     line-height: 1.3;
     padding: 5px 12px;
     margin-top: 8px;
@@ -260,6 +265,29 @@ html {
     height: 22px!important;
     -webkit-mask-size: 30px auto
 }
+
+
+.proofratings-widget.proofratings-widget-google {--themeColor: #03AB4E}
+.proofratings-widget.proofratings-widget-facebook {--themeColor: #0f7ff3}
+.proofratings-widget.proofratings-widget-yelp {--themeColor: #e21c21}
+.proofratings-widget.proofratings-widget-bbb {--themeColor: #136796}
+.proofratings-widget.proofratings-widget-trustpilot {--themeColor: #01B67B}
+.proofratings-widget.proofratings-widget-bestcompany {--themeColor: #3c5170}
+.proofratings-widget.proofratings-widget-angi {--themeColor: #FF5E4F}
+.proofratings-widget.proofratings-widget-guildquality {--themeColor: #032e57}
+.proofratings-widget.proofratings-widget-energysage {--themeColor: #bf793f}
+.proofratings-widget.proofratings-widget-solarreviews {--themeColor: #0f92d7}
+.proofratings-widget.proofratings-widget-solarquotes {--themeColor: #208ECD}
+.proofratings-widget.proofratings-widget-solartribune {--themeColor: #fbcb38}
+.proofratings-widget.proofratings-widget-oneflare {--themeColor: #3D9EA0}
+.proofratings-widget.proofratings-widget-wordpress {--themeColor: #00769D}
+.proofratings-widget.proofratings-widget-capterra {--themeColor: #044D80}
+.proofratings-widget.proofratings-widget-g2 {--themeColor: #EF4D35}
+.proofratings-widget.proofratings-widget-getapp {--themeColor: #41E3E2}
+.proofratings-widget.proofratings-widget-softwareadvice {--themeColor: #FD810D}
+.proofratings-widget.proofratings-widget-saasworthy {--themeColor: #FEBA52}
+.proofratings-widget.proofratings-widget-crozdesk {--themeColor: #015BE3}
+.proofratings-widget.proofratings-widget-quickbooks {--themeColor: #2C9F1C}
 
 .proofratings-floating-widgets-box::-webkit-scrollbar {
     height: 5px;
