--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -13,6 +13,7 @@ html {
     display: inline-block;
     font-size: 18px;
     line-height: 1.3;
+    font-family: var(--proofratingsFont);
     cursor: pointer;
     text-decoration: none!important;
     border-radius: 10px;
@@ -77,6 +78,7 @@ html {
     display: flex;
     font-size: 21px;
     font-weight: bold;
+
     justify-content: center;
     align-items: center;
 }
@@ -89,6 +91,8 @@ html {
 }
 
 .proofratings-stars {
+    position: relative;
+    top: -1px;
     margin-left: 7px;
     width: 97.5px!important;
     display: inline-block;
