--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -91,8 +91,6 @@ html {
 }
 
 .proofratings-stars {
-    position: relative;
-    top: -1px;
     margin-left: 7px;
     width: 97.5px!important;
     display: inline-block;
@@ -563,6 +561,7 @@ html {
 }
 
 @media screen and (max-width: 575px) {
+    .proofratings-banner-badge .proofratings-logos {flex: 0 0 100%; margin: 0 0 10px 0;}
     .proofratings-banner-badge .rating-box {margin-right: 0;}
     .proofratings-banner-badge .proofratings-review-count {flex: 0 0 100%; margin: 15px auto}
 
