--- a/assets/webfonts/fonts.css
+++ b/assets/webfonts/fonts.css
@@ -5,6 +5,7 @@
     font-weight: bold;
     font-style: italic;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
     font-weight: bold;
     font-style: normal;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -23,6 +25,7 @@
     font-weight: 500;
     font-style: normal;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -32,6 +35,7 @@
     font-weight: 300;
     font-style: normal;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -41,6 +45,7 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -50,6 +55,7 @@
     font-weight: 500;
     font-style: italic;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -59,6 +65,7 @@
     font-weight: 300;
     font-style: italic;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -68,6 +75,7 @@
     font-weight: 600;
     font-style: normal;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -77,6 +85,7 @@
     font-weight: normal;
     font-style: italic;
     font-display: swap;
+    descent-override: 30%;
 }
 
 @font-face {
@@ -86,5 +95,6 @@
     font-weight: 600;
     font-style: italic;
     font-display: swap;
+    descent-override: 30%;
 }
 
