--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -172,7 +172,7 @@ html {
     --shadowColor: rgba(0,0,0, 0.25);
     --reviewCountTextColor: #fff;
     
-    color: var(--textColor, inherit)!important;
+    color: var(--textColor, #000)!important;
     display: flex;
     position: relative;
     padding: 10px 20px;
