--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -206,6 +206,18 @@ html {
     max-height: 100%;
 }
 
+.proofratings-widget.proofratings-widget-square:not(.proofratings-widget-logo-color) .review-site-logo {
+    -webkit-mask-image: none!important;
+}
+
+.proofratings-widget.proofratings-widget-square.proofratings-widget-logo-color .review-site-logo {
+    -webkit-mask-position: center;
+    -webkit-mask-repeat: no-repeat;
+    background-color: var(--logoColor)
+}
+
+.proofratings-widget.proofratings-widget-square.proofratings-widget-logo-color .review-site-logo img {visibility: hidden;}
+
 .proofratings-widget .proofratings-stars i {
     background-color: var(--themeColor, #0f7ff3);
 }
