--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -20,6 +20,12 @@ table.locations_table tr .column-action {width: 100px}
     box-shadow: 0 1px 1px rgb(0 0 0 / 4%);
 }
 
+.proofraing-progress-msg {
+    font-size: 40px;
+    margin: 30px 0;
+    font-weight: bold;
+}
+
 .proofratings-status p {
     margin: 0;
     font-size: inherit;
